# gpt-speak

./: README.md  pyproject.toml
gpt_speak/: main.py  recording.py
tests/: test_gpt_speak.py
