[tool.poetry]
name = "gpt-speak"
version = "0.1.0"
description = ""
authors = ["Jacek Chmielewski <jchmielewski@teonite.com>"]

[tool.poetry.dependencies]
python = "^3.8"
revChatGPT = "^0.0.34"
click = "^8.1.3"
sounddevice = "^0.4.5"
soundfile = "^0.11.0"
whisper = {git = "https://github.com/openai/whisper.git", rev = "main"}
torch = "^1.13.0"
tqdm = "^4.64.1"
numpy = "^1.23.5"
transformers = "^4.25.1"
ffmpeg-python = "0.2.0"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
